bad/bin_op_ge_class_void.example_compiler_output
ERROR
[1mbad/bin_op_ge_class_void.lat:6:8: [1;31merror: [0;1moperator >= is defined only for int values and string values, not `Y` and `void`[m
	new Y >= foo();
	      [1;32m^[m
